--- a/src/globals.css
+++ b/src/globals.css
@@ -67,6 +67,15 @@
     @apply bg-background text-foreground;
   }
 
+  html {
+    scroll-behavior: smooth;
+    text-rendering: optimizeSpeed;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    @apply antialiased;
+  }
+
   .no-scroll::-webkit-scrollbar {
     display: none;
   }
